# BLUEBRAIN-001

./: .gravityrules  BLUEBRAIN-001.code-workspace  BLUE_BRAIN_DATA_FLOW.md  CMakeLists.txt  ESP32S3-VIBRACIONES.code-workspace  HARDWARE_CONFIG.md  README.md  status_report.md
blue_brain_firmware/: CMakeLists.txt  auto-build.ps1  build.bat  build.ps1  clean-rebuild.bat  partitions.csv  sdkconfig.defaults  verify.ps1
blue_brain_firmware/components/bb_config/: CMakeLists.txt
blue_brain_firmware/components/bb_config/include/: bb_config.h  hardware_defs.h
blue_brain_firmware/components/bb_config/src/: bb_config.c
blue_brain_firmware/components/bb_connect/: CMakeLists.txt  Kconfig
blue_brain_firmware/components/bb_connect/include/: bb_connect.h
blue_brain_firmware/components/bb_display/: CMakeLists.txt
blue_brain_firmware/components/bb_dsp_ai/: CMakeLists.txt  idf_component.yml
blue_brain_firmware/components/bb_espnow/: CMakeLists.txt
blue_brain_firmware/components/bb_power/: CMakeLists.txt
blue_brain_firmware/components/bb_sensors/: CMakeLists.txt
blue_brain_firmware/components/bb_storage/: CMakeLists.txt
blue_brain_firmware/components/bb_web_ui/: CMakeLists.txt  app.js  index.html  style.css
blue_brain_firmware/components/bb_web_ui/include/: bb_web_ui.h
blue_brain_firmware/components/bb_web_ui/src/: bb_web_ui.c
blue_brain_firmware/main/: CMakeLists.txt  main.c
blue_brain_firmware/main/include/: hardware_defs.h
examples/wifi_scanner/main/: CMakeLists.txt
main/: BLUE_BRAIN_SPEC.md  CMakeLists.txt  blink_example_main.c
(+16 files in other folders)
